--- a/dev/scss/main/matchinfo.scss
+++ b/dev/scss/main/matchinfo.scss
@@ -82,7 +82,7 @@ div.matchinfo {
 
 ul#treeMenu {
   border-top-right-radius: 8px;
-  z-index: 200;
+  z-index: 150;
   font-size: 10pt;
   position: fixed;
   // width: $left-width;
