--- a/dev/scss/main/pagination.scss
+++ b/dev/scss/main/pagination.scss
@@ -27,7 +27,7 @@ $border-size : 2px;
   position: fixed;
   right: ($standard-margin / 4);
   bottom: ($standard-margin / 2);
-  z-index: 400;
+  z-index: 35;
   padding: 0;
   height: auto;
   line-height: 0;
